<resources>
    <string name="app_name">Rhome</string>

    <!-- START ACTIVITY -->
    <string name="start_title">The Rhome Application</string>
    <string name="start_sub_title">Version 1.0</string>
    <string name="start_button">Start!</string>

    <!-- Pick Start and end Activity -->
    <string name="step_one_title">Your start and end</string>
    <string name="step_one_set_start_location">Pick start location</string>
    <string name="step_one_reset_start_location">New start location</string>
    <string name="step_one_set_end_location">Pick end location</string>
    <string name="step_one_reset_end_location">New end location</string>
    <string name="step_one_done_button">Done!</string>
    <string name="step_one_start_location_header">Your start location</string>
    <string name="step_one_end_location_header">Your end location</string>
    <string name="step_one_no_location_choosen">Choose a location!</string>

    <!-- SELECT START ACTIVITY -->
    <string name="select_start_title">Choose your start</string>
    <string name="select_start_info_header">Location info</string>

    <!-- SELECT END ACTIVITY -->
    <string name="select_end_title">Choose your end</string>
    <string name="select_end_info_header">Location info</string>

    <!-- Pick Places to visit activity -->
    <string name="select_places_to_visit_title">Places to visit</string>
    <string name="select_places_to_visit_start_location_text">Start location: </string>
    <string name="select_places_to_visit_end_location_text">End location: </string>
    <string name="select_places_to_visit_place_list_header">Selected places</string>
    <string name="select_places_to_visit_add_place_button">Add new place</string>
    <string name="select_places_to_visit_done_button">Done!</string>
    <string name="select_places_context_menu_header">Options</string>

    <string-array name="select_places_context_menu">
        <item>Remove place from list</item>
        <item>Back</item>
    </string-array>

    <!-- Select what to do activity -->
    <string name="what_to_do_header">What do you want to do?</string>
    <string name="what_to_do_search_placeholder">Enter text</string>
    <string name="what_to_do_search_button_text">Search</string>
    <string name="what_to_do_list_types_button">Show list of location types</string>

    <!--  OLD ONES BELOW -->
    <!-- Main Activity -->

    <string name="title_activity_maps">Map</string>
    <string name="start_location_not_set">Start!</string>
    <string name="start_location_is_set">New start!</string>
    <string name="end_location_not_set">End!</string>
    <string name="end_location_is_set">New end!</string>
    <string name="title_activity_my_location">Map</string>
    <string name="main_activity_header">W e l c o m e !</string>
    <string name="start_location_info_header">Start location:</string>
    <string name="end_location_info_header">End location:</string>
    <string name="select_places_to_visit">Pick places to Rhome through!</string>

    <string name="list_places_header">Places to visit</string>
    <string name="calculate_fastest_route">Rhome fastest!</string>
    <string name="calculate_shortest_route">Rhome shortest!</string>


    <!-- Maps Activity -->
    <string name="your_start_location">Pick start location</string>
    <string name="your_end_location">Pick end location</string>
    <string name="your_location_info">Info on selected location:</string>
    <string name="service_not_available">No service available</string>
    <string name="invalid_lat_long_used">Invalid LatLng used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="select_places_button">Select places</string>

    <!-- ListLocationTypeSelection Activity -->
    <string name="list_location_type_header">Select type of location</string>
    <string name="button_my_location">Use current location</string>
    <string name="button_pick_selected">Use selected position</string>
    <string name="toggle_favourites_button_show_favourites">Show favourite types</string>
    <string name="toggle_favourites_button_show_all">Show all types</string>

    <string-array name="list_location_type_context_menu">
        <item>Reset most visited count</item>
        <item>Back</item>
    </string-array>


    <!-- ListNearbyPlacesOfType Activity -->
    <string name="list_nearby_locations_header">Places found nearby</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="getting_locations">Getting locations, hold tight!</string>

    <string-array name="places_context_menu">
        <item>Show on map</item>
        <item>Do not show again</item>
    </string-array>

    <!-- Route activity-->
    <string name="route_activity_header">Your route home!</string>
    <string name="button_show_route">Show route on map</string>
    <string name="calculating_route_text">Calculating best route, hold tight!</string>

    <!-- Route map activity -->
    <string name="route_map_activity_title">Your route!</string>

    <!-- Minor routes activity -->
    <string name="minor_start">Start</string>
    <string name="minor_dest">Destination</string>
    <string name="minor_item_header">Route number</string>

    <!-- Place list item -->
    <string name="place_selected">Place is selected!</string>
    <string name="place_selected_button">Remove place</string>

    <!-- System strings -->
    <string name="address_service_description">Fetches addresses for Rhome Application</string>

    <!-- Fonts -->
    <string name="font_name_angeline">angeline</string>
    <string name="font_name_eltercerhombre">eltercerhombre</string>

    <!-- Route map activity-->
    <string name="button_starting_route">Start route</string>

    <!-- Minor routes activity -->
    <string name="list_minor_routes_header">Your minor routes</string>
    <string name="button_navigate">Show list for navigation</string>


    <string-array name="minor_route_context">
        <item>Navigate from my current position</item>
        <item>Show turn-by-turn navigation</item>
    </string-array>

    <string name="minor_route_context_header">Navigation</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
