<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lorentzonsolutions.rhome.activities.StartActivity">

    <lorentzonsolutions.rhome.customViews.EdoszTextView
        android:id="@+id/start_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start_title"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <lorentzonsolutions.rhome.customViews.EdoszTextView
        android:id="@+id/start_activity_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sub_title"
        android:textAlignment="center"
        android:layout_below="@id/start_activity_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="visible"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>
