<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#e2802b"
    tools:context="lorentzonsolutions.rhome.MainActivity">


    <lorentzonsolutions.rhome.customViews.HeaderTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_header"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="60sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">
        <lorentzonsolutions.rhome.customViews.HombreButton
            android:id="@+id/start_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_location_not_set"
            android:background="@drawable/rounded_item"
            android:textSize="20sp"
            android:layout_marginRight="10sp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <lorentzonsolutions.rhome.customViews.HombreButton
            android:id="@+id/end_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_location_not_set"
            android:background="@drawable/rounded_item"
            android:textSize="20sp"
            android:layout_marginLeft="10sp"
            style="@style/Widget.AppCompat.Button.Colored"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <lorentzonsolutions.rhome.customViews.EdoszTextView
            android:id="@+id/start_location_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_location_info_header"
            android:gravity="center"
            android:layout_margin="5sp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="15sp"
            android:visibility="invisible"/>

        <lorentzonsolutions.rhome.customViews.EdoszTextView
            android:id="@+id/start_location_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <lorentzonsolutions.rhome.customViews.EdoszTextView
                android:id="@+id/end_location_info_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_location_info_header"
                android:gravity="center"
                android:layout_margin="5sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textSize="15sp"
                android:visibility="invisible"/>

            <lorentzonsolutions.rhome.customViews.EdoszTextView
                android:id="@+id/end_location_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textSize="14sp"
                android:gravity="center"
                android:visibility="invisible"/>
        </LinearLayout>



        </LinearLayout>




    <lorentzonsolutions.rhome.customViews.HombreButton
        android:id="@+id/select_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_places_button"
        android:textSize="20sp"
        android:background="@drawable/rounded_item"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <lorentzonsolutions.rhome.customViews.HeaderTextView
        android:id="@+id/selected_places_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:textSize="35sp"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/list_places_header"/>

    <lorentzonsolutions.rhome.customViews.HombreButton
        android:id="@+id/fastest_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_item"
        style="@style/Widget.AppCompat.Button.Colored"
        android:visibility="invisible"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/calculate_fastest_route"/>


    <ListView
        android:id="@+id/selected_places_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
