<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lorentzonsolutions.rhome.activities.SelectWhatToDoActivity">

    <lorentzonsolutions.rhome.customViews.EdoszTextView
        android:id="@+id/what_to_do_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_to_do_header"
        android:textSize="@dimen/header_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/header_margin"/>

    <LinearLayout
        android:id="@+id/what_to_do_search_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/what_to_do_header"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/what_to_do_search_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/what_to_do_search_placeholder" />
        <Button
            android:id="@+id/what_to_do_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_to_do_search_button_text"
            style="@style/Widget.AppCompat.Button.Colored" />


    </LinearLayout>

    <Button
        android:id="@+id/what_to_do_list_types_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/what_to_do_list_types_button"/>

    <Button
        android:id="@+id/what_to_do_favourite_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_to_do_favourite_list_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/what_to_do_search_component"/>

    <ListView
        android:id="@+id/what_to_do_search_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/what_to_do_favourite_list_button"
        android:layout_above="@id/what_to_do_list_types_button"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/what_to_do_floating_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
