<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lorentzonsolutions.rhome.activities.RouteActivity">

    <lorentzonsolutions.rhome.customViews.EdoszTextView
        android:id="@+id/route_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_activity_header"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="35sp"/>

    <Button
        android:id="@+id/button_show_minor_route_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_navigate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/button_show_route_on_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_route"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_above="@id/button_show_minor_route_list"
        style="@style/Widget.AppCompat.Button.Colored" />

    <ListView
        android:id="@+id/fastest_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/route_activity_title"
        android:layout_above="@id/button_show_route_on_map"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_route_floating_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        android:layout_margin="5dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
