<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#8092af"
    android:orientation="vertical">

    <!-- ################################ Your location map container ################################ -->

    <LinearLayout
        android:id="@+id/map_container_your_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:gravity="center"
                android:layout_margin="10dp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/my_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_my_location"
                android:background="#4f6991"
                android:padding="15dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>


        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_margin="10dp"
            />


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:context="lorentzonsolutions.rhome.StartLocationActivity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_location_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"
            android:padding="10dp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/location_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_use_location"
            android:text="@string/button_pick_selected"
            android:background="#4f6991"
            android:padding="15dp"
            style="@style/Widget.AppCompat.Button.Colored"/>




    </LinearLayout>



</LinearLayout>






